[project]
name = "tour-dispatcher"
version = "0.1.0"
description = "Mock tour dispatcher service for interview training"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.23",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
